# nota

./: README.md  index.html  package.json  plate-components.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: app.tsx  globals.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/notes/: create_vault.rs  mod.rs
src-tauri/src/vaults/: create_vault.rs  delete_vault.rs  mod.rs
src/components/: icons.tsx  tabbable-element.tsx
src/components/app/: context.tsx  editor.tsx  nav.tsx  sub-nav.tsx  vault-switch.tsx
src/components/onboarding/: conclusion.tsx  create-vault.tsx  index.tsx  welcome.tsx
src/components/plate-ui/: align-dropdown-menu.tsx  avatar.tsx  blockquote-element.tsx  button.tsx  checkbox.tsx  code-block-combobox.tsx  code-block-element.tsx  code-leaf.tsx  code-line-element.tsx  code-syntax-leaf.tsx  color-dropdown-menu-items.tsx  color-dropdown-menu.tsx  color-input.tsx  color-picker.tsx  colors-custom.tsx  column-element.tsx  column-group-element.tsx  combobox.tsx  command.tsx  comment-avatar.tsx  comment-create-form.tsx  comment-item.tsx  comment-leaf.tsx  comment-more-dropdown.tsx  comment-reply-items.tsx  comment-resolve-button.tsx  comment-toolbar-button.tsx  comment-value.tsx  comments-popover.tsx  cursor-overlay.tsx  dialog.tsx  editor.tsx  (+54 more)
src/contexts/: settings.tsx
src/hooks/: use-prevent-context.tsx  use-prevent-zoom.tsx
src/routes/: __root.tsx  index.lazy.tsx  index.tsx  settings.lazy.tsx
(+7 files in other folders)
