[package]
name = "nota"
version = "0.0.0"
description = "Notes for the modern era."
authors = ["tygrxqt"]
edition = "2021"

[profile.dev]
incremental = true # compile binary in smaller steps.

[profile.release]
codegen-units = 1 # allow LLVM to perform better optimizations.
lto = true # enables link-time-optimizations.
opt-level = "s" # prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # higher performance by disabling panic handlers.
strip = true # ensures debug symbols are removed.

[lib]
name = "nota_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.9"
tokio = { version = "1.38.0", features = ["sync", "macros"] }
tokio-macros = "2.3.0"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.9"

